--- a/ansible/playbook1.yml
+++ b/ansible/playbook1.yml
@@ -1,7 +1,7 @@
 
 ---
 
-- hosts: tag_Name_server1
+- hosts: tag_Name_server_1, tag_Name_server_2
   sudo: yes
   gather_facts: no
   remote_user: ubuntu
