--- a/ansible/playbook1.yml
+++ b/ansible/playbook1.yml
@@ -48,7 +48,17 @@
 #        owner: www-data
 #        group: www-data
         state: link
-
+    
+    - name: http to https redirect
+      blockinfile:
+        path: /etc/apache2/apache2.conf
+        block: |
+          <VirtualHost *:80>
+          RewriteEngine On
+          RewriteCond %{HTTP:X-Forwarded-Proto} =http
+          RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
+          </VirtualHost>
+          
     - name: restart apache
       service: name=apache2 state=restarted
 
